denoising artifacts with normal mapping in diffuse #53567

Closed
opened 2017-12-16 11:50:11 +01:00 by fra are · 7 comments

System Information
win8.1 - Nvidia geforce 940m - intelgraphics5500

Blender Version
Broken: 2.79 5bd8ac9
Worked: (optional)

Short description of error
denoising creates artifacts when I put directly node mapping\normal in diffuse

Exact steps for others to reproduce the error
this is the file
random1.blend
play render whit denoising actived -> render with error
play render without denoising -> render ok
play render whit denoising actived and node "hue saturation value" between mapping and diffuse -> render ok

**System Information** win8.1 - Nvidia geforce 940m - intelgraphics5500 **Blender Version** Broken: 2.79 5bd8ac9 Worked: (optional) **Short description of error** denoising creates artifacts when I put directly node mapping\normal in diffuse **Exact steps for others to reproduce the error** this is the file [random1.blend](https://archive.blender.org/developer/F1422115/random1.blend) play render whit denoising actived -> render with error play render without denoising -> render ok play render whit denoising actived and node "hue saturation value" between mapping and diffuse -> render ok
Author

Added subscriber: @FrancescoArena

Added subscriber: @FrancescoArena
Lukas Stockner was assigned by Sergey Sharybin 2017-12-18 10:39:07 +01:00

Added subscriber: @ja12

Added subscriber: @ja12

Quite sure the denoising artifacts are from negative values, same as using musgrave texture as diffuse color
https://blenderartists.org/forum/showthread.php?441890-Strange-artifacts-with-Musgrave-texture

I can't test with GPU but when rendering with CPU, I'm not getting as severe artifacts as shown here
https://blenderartists.org/forum/showthread.php?442472-Denoising-artifacts-with-random-colors&p=3267329&viewfull=1#post3267329

mine:
untitled.png
If it is with the same settings.

Quite sure the denoising artifacts are from negative values, same as using musgrave texture as diffuse color https://blenderartists.org/forum/showthread.php?441890-Strange-artifacts-with-Musgrave-texture I can't test with GPU but when rendering with CPU, I'm not getting as severe artifacts as shown here https://blenderartists.org/forum/showthread.php?442472-Denoising-artifacts-with-random-colors&p=3267329&viewfull=1#post3267329 mine: ![untitled.png](https://archive.blender.org/developer/F1441529/untitled.png) If it is with the same settings.

Figured out the difference. I was using an old development build from 18.8. which gave different result with denoising. Removing negative values before rendering fixes denoising in all of them
Ubuntu 14.04 64bit, gnome 3 fallback, nvidia graphics. Rendered with cpu, 32x32 tile size.

Blender 2.79 release 5bd8ac9abf
0_b279_5bd8ac9abfa.png

Blender 2.79 build from 18.8. 7b397cdfc8
1_b279_7b397cdfc81.png

Blender 2.79.1 latest build bb30ce0f0b
2_b279_bb30ce0f0bf.png

Figured out the difference. I was using an old development build from 18.8. which gave different result with denoising. Removing negative values before rendering fixes denoising in all of them Ubuntu 14.04 64bit, gnome 3 fallback, nvidia graphics. Rendered with cpu, 32x32 tile size. Blender 2.79 release 5bd8ac9abfa ![0_b279_5bd8ac9abfa.png](https://archive.blender.org/developer/F1454169/0_b279_5bd8ac9abfa.png) Blender 2.79 build from 18.8. 7b397cdfc81 ![1_b279_7b397cdfc81.png](https://archive.blender.org/developer/F1454179/1_b279_7b397cdfc81.png) Blender 2.79.1 latest build bb30ce0f0bf ![2_b279_bb30ce0f0bf.png](https://archive.blender.org/developer/F1454192/2_b279_bb30ce0f0bf.png)

This issue was referenced by blender/cycles@8d380a224c

This issue was referenced by blender/cycles@8d380a224c2d4dccf0cd9880c26a6fd0dc42fadb

This issue was referenced by bf1dc39679

This issue was referenced by bf1dc3967971c882a9179d31a36f03702cbc8e0f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53567
No description provided.